# stero_mobile

./: CMakeLists.txt  komendy.md  package.xml
config/: my_config.yaml
launch/: korytarz.launch  labirynt.launch  navigation.launch  stero_mobile.launch  tiago_simple.launch
move_square/: CMakeLists.txt  package.xml
move_square/src/: move_square.cpp  recorder.cpp
navigation/: package.xml
navigation/map_params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
navigation/src/: navigation_node.cpp
rosbag/: pomiary1.bag  r_s5_v1_a05.bag  readbag.py
rosbag/l_s5_v06_a05/: key_vel.csv  mobile_base_controller-odom.csv
rosbag/l_s5_v1_a05/: key_vel.csv
rosbag/l_s5_v1_a07/: key_vel.csv  mobile_base_controller-odom.csv
rosbag/l_s5_v1_a1/: key_vel.csv  mobile_base_controller-odom.csv
rosbag/pomiary1/: key_vel.csv  mobile_base_controller-odom.csv
rosbag/r_s5_v01_a05/: key_vel.csv
rosbag/r_s5_v06_a05/: key_vel.csv  mobile_base_controller-odom.csv
rosbag/r_s5_v1_a05/: key_vel.csv  mobile_base_controller-odom.csv
rviz/: simple.rviz
worlds/: korytarz.world  labirynt.world
worlds/korytarz/: model.sdf
worlds/labirynt/: model.config
worlds/labirynt/labirynt/: model.sdf
worlds/xlabirynt/: model.sdf
